#[[
 Author    :  Damir Bakiev                                                    
 Version   :  na                                                              
 Date      :  ХХ ХХХ 2025
 Website   :  na                                                              
 Copyright :  Damir Bakiev 2016-2025
 License   :                                                                  
 Use, modification & distribution is subject to Boost Software License Ver 1. 
 http://www.boost.org/LICENSE_1_0.txt                                         
]]
cmake_minimum_required(VERSION 3.30.0 FATAL_ERROR)

# static lib
add_subdirectory(clipper)
add_subdirectory(filetree)
add_subdirectory(gi)
add_subdirectory(graphicsview)
add_subdirectory(common)
add_subdirectory(tooldatabase)
